--- a/style.scss
+++ b/style.scss
@@ -306,13 +306,15 @@ a {
 }
 
 .section-carousel__div {
-  width: 100vw;
+  width: 100%;
   height: 560px;
-  position: relative;
+  position: absolute;
   top: -90px;
+  left: 0;
+  @include opacity(0);
   z-index: 0;
   flex: 1 0 100%;
-  @include opacity(0);
+  //@include opacity(0);
   -webkit-transition: all 400ms;
   -moz-transition: all 400ms;
   -ms-transition: all 400ms;
@@ -320,7 +322,7 @@ a {
   transition: all 400ms;
 }
 
-.current{
+.section-carousel__div:first-of-type{
   @include opacity(1);
 }
 
